fix layout bug affecting editor palette

--- a/Console/style/tab_panel.less
+++ b/Console/style/tab_panel.less
@@ -147,7 +147,7 @@
     position: relative;
     display: flex;
     align-items: stretch;
-    * > { flex-grow: 1; }
+    > * { flex-grow: 1; }
   }
 
 }
